Ships are now drawn on the grid with simple grey squares. Still need to code for preventing ships from overlapping on the grid

--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,6 @@ body {
 }
 .my-squares {}
 .tracking-squares {}
+.my-ships{
+  background-color: grey;
+}
